# phishweb

./: .gitignore  Cargo.toml  README.md  build-bins.sh
src/: capture.rs  cli.rs  main.rs  routes.rs
www/: index.html  login.html  panel.html
www/js/: login.js  panel.js
