[package]
name = "phishweb"
version = "1.0.1"
edition = "2021"

[profile.release]
strip = true

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
clap = { version = "4.5.18", features = ["derive"] }
log = { version = "0.4.22", features = ["std"] }
serde = { version = "1.0.210", features = ["derive"] }
simple_logger = { version = "5.0.0", default-features = false, features = [
    "colors",
    "colored",
    "stderr",
] }
tokio = { version = "1.40.0", features = ["fs"] }
